--- a/09_Theme_08_v2/Views/Shared/_Layout.cshtml
+++ b/09_Theme_08_v2/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     }
 }
 <!DOCTYPE html>
-<html amp lang="vi" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
+<html amp lang="vi">
 <head>
+    <meta charset="utf-8">
     <title>@ViewBag.Title</title>
 
     @Styles.Render("~/Content/css")
@@ -16,7 +17,7 @@
     <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Refresh" content="3600" />
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="robots" content="*">
     <!-- Apple iOS and Android stuff -->
     <meta name="apple-mobile-web-app-capable" content="no" />
