--- a/09_Theme_08_v2/Views/Shared/_Layout.cshtml
+++ b/09_Theme_08_v2/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
 
     @*AMP*@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
