--- a/09_Theme_08_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/09_Theme_08_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -50,7 +50,7 @@
                         <div class="co-info">
                             <div>
                                 <a href="/">
-                                    <amp-img src="@commonInfo.Logo" alt="@commonInfo.Name" height="200" width="200"></amp-img>
+                                    <img src="@commonInfo.Logo" alt="@commonInfo.Name">
                                 </a>
                             </div>
                             <address>
