--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
-                <img src="/assets/images/about.jpg" />
+                <img src="https://media.anpero.com/images/29/92018/about2018090402260971.jpg" />
             </div>
         </div>
     </div>
@@ -95,8 +95,12 @@
         <div class="row">
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
-                    <h2>Công nghệ sử dụng</h2>
-                    <p>Anpero sử dụng các công nghệ an toàn và tân tiến nhất được cập nhật liên tục để thiết kế hệ thống web quản lý bán hàng. Khách hàng có thể yên tâm về độ ổn định cũng như bảo mật khi sử dụng hệ thống quản trị web bán hàng của chúng tôi! <a href="/about" title="dự án ngoại giao đoàn">Xem thêm</a></p>
+                    <h2>Công nghệ và Quy trình</h2>
+                    <p>
+                        Các công nghệ, quy trình OFREZH đảm bảo thân thiện với môi trường
+
+
+                    </p>
                 </div>
             </div>
         </div>
@@ -105,13 +109,13 @@
                 <div class="col-xs-12 col-sm-5">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="/assets/images/455x480.png" alt="thiết kế web bán hàng">
+                            <img src="//media.anpero.com/images/29/92018/12018090402141934.jpg" alt="Rau hữu cơ, phân trùn quế">
                         </div>
                         <div class="item">
-                            <img src="/assets/images/slide2.jpg" alt="thiết kế web quản lý bán hàng">
+                            <img src="//media.anpero.com/images/29/92018/22018090402201016.jpg" alt="thiết kế web quản lý bán hàng">
                         </div>
                         <div class="item">
-                            <img src="/assets/images/slide3.png" alt="web bán hàng giá rẻ">
+                            <img src="//media.anpero.com/images/29/92018/12018090402141934.jpg" alt="web bán hàng giá rẻ">
                         </div>
                     </div>
                 </div>
@@ -122,8 +126,8 @@
                                 <div class="photography-icon">
                                     <i class="fa fa-cogs"></i>
                                 </div>
-                                <h2>Công nghệ bảo quản</h2>
-                                <p>Nền tảng để xây dựng Anpero là .NET Core, Sql Server đây là các công nghệ mà hầu hết các ngân hàng trên thế giới sử dụng. Thêm vào đó với sự hỗ trợ của trí thông minh nhân tạo của Microsoft’s giúp Anpero cập nhật và duy trì sự ổn định của hệ thống ở mức cao nhất</p>
+                                <h2>Bảo quản</h2>
+                                <p>Các sản phẩm hữu cơ có thể để lâu hơn các sản phẩm sạch, và sử dụng phân bón kích thích. OFREZH không dùng bất cứ một chất phụ gia nào để bảo quản thực phẩm.</p>
                             </div>
                         </li>
                         <li data-target="#photographyCarousel" data-slide-to="1">
@@ -132,7 +136,7 @@
                                     <i class="fa fa-database"></i>
                                 </div>
                                 <h2>Công nghệ nuôi trùn quế</h2>
-                                <p>Cloud Server xây dựng trên nền tảng công nghệ điện toán đám mây Azure đảm bảo hệ thống chịu được tải cực lớn. Sử dụng SQL Data Warehouse của Microsoft được các kỹ sư giỏi nhất thế giới đảm bảo về độ an toàn và ổn định </p>
+                                <p>Kỹ thuật nuôi giun trùn quế được chuyển giao từ Cộng Hòa Liên Bang Đức. Đảm bảo thành phần dinh dưỡng mà Phân Trùn Quế mang lại cho cây trồng ở mức cao nhất, giúp cây phát triển khỏe mạnh từ giao đoạn ươm hạt đến khi thu hoạch.</p>
                             </div>
                         </li>
                         <li data-target="#photographyCarousel" data-slide-to="2">
@@ -141,7 +145,7 @@
                                     <i class="fa fa-puzzle-piece "></i>
                                 </div>
                                 <h2>Công nghệ trồng rau hữu cơ</h2>
-                                <p>Sử dụng nền tảng quản lý web bán hàng Anpero bạn có thể tự tùy bến web nếu biết chút ít về lập trình. Ngoài ra bạn cũng có thể tự chủ về nơi đặt frontend website (hosting) nếu dịch vụ của chúng tôi không làm bạn hài lòng.</p>
+                                <p>Rau Hữu Cơ OFREZH trồng từ Phân Trùn Quế không cần bất cứ loại phân bón nào mà vẫn phát triển khỏe mạnh. Chúng tôi nói không với phân bón hóa học, thuốc bảo vệ thực vật.</p>
                             </div>
                         </li>
                     </ol>
