--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
 
 </head>
 <body>
-    
-    
-    @if(ViewBag.pageName != null && !Request.Browser.IsMobileDevice && ViewBag.pageName == "home")
+
+
+    @if (ViewBag.pageName != null && !Request.Browser.IsMobileDevice && ViewBag.pageName == "home")
     {
         <header class="top-area section-relative" id="home">
             @Html.Partial("_partial/_MainMenu")
@@ -39,12 +39,12 @@
     }
     else
     {
-     <header class="section-relative" id="home">
-        @Html.Partial("_partial/_MainMenu")
-    </header>
+        <header class="section-relative" id="home">
+            @Html.Partial("_partial/_MainMenu")
+        </header>
 
-     }
-    
+    }
+
     @RenderBody()
     <footer class="footer-area">
         <div class="footer-top section-padding section-padding2">
@@ -66,9 +66,9 @@
                             <div class="contact-details">
                                 <p><i class="fa fa-phone"></i><a href="callto:@commonInfo.HotLine">@commonInfo.HotLine</a></p>
                                 <p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:@commonInfo.Email">@commonInfo.Email</a></p>
-                               
+
                             </div>
-                          
+
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3 xs-bottom-40">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                 
+
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
@@ -107,7 +107,7 @@
                         }
                     </div>
                 </div>
-               
+
             </div>
         </div>
         <div class="footer-bottom">
@@ -130,7 +130,7 @@
             </div>
         </div>
     </footer>
-    @Scripts.Render("~/bundles/script")  
+    @Scripts.Render("~/bundles/script")
     @Html.Raw(commonInfo.AnperoPlugin)
 
     @RenderSection("scripts", required: false)
@@ -146,14 +146,14 @@
             js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-        
+
     </script>
     <script type="text/javascript">
-         function GTranslateGetCurrentLang() { var keyValue = document.cookie.match('(^|;) ?googtrans=([^;]*)(;|$)'); return keyValue ? keyValue[2].split('/')[2] : null; }
-         function GTranslateFireEvent(element, event) { try { if (document.createEventObject) { var evt = document.createEventObject(); element.fireEvent('on' + event, evt) } else { var evt = document.createEvent('HTMLEvents'); evt.initEvent(event, true, true); element.dispatchEvent(evt) } } catch (e) { } }
-         function doGTranslate(lang_pair) {
-             if (lang_pair.value) lang_pair = lang_pair.value; if (lang_pair == '') return; var lang = lang_pair.split('|')[1]; if (GTranslateGetCurrentLang() == null && lang == lang_pair.split('|')[0]) return; var teCombo; var sel = document.getElementsByTagName('select'); for (var i = 0; i < sel.length; i++) if (sel[i].className == 'goog-te-combo') teCombo = sel[i]; if (document.getElementById('google_translate_element2') == null || document.getElementById('google_translate_element2').innerHTML.length == 0 || teCombo.length == 0 || teCombo.innerHTML.length == 0) { setTimeout(function () { doGTranslate(lang_pair) }, 500) } else { teCombo.value = lang; GTranslateFireEvent(teCombo, 'change'); GTranslateFireEvent(teCombo, 'change') } $("body").css("top", 0);
-         }
+        function GTranslateGetCurrentLang() { var keyValue = document.cookie.match('(^|;) ?googtrans=([^;]*)(;|$)'); return keyValue ? keyValue[2].split('/')[2] : null; }
+        function GTranslateFireEvent(element, event) { try { if (document.createEventObject) { var evt = document.createEventObject(); element.fireEvent('on' + event, evt) } else { var evt = document.createEvent('HTMLEvents'); evt.initEvent(event, true, true); element.dispatchEvent(evt) } } catch (e) { } }
+        function doGTranslate(lang_pair) {
+            if (lang_pair.value) lang_pair = lang_pair.value; if (lang_pair == '') return; var lang = lang_pair.split('|')[1]; if (GTranslateGetCurrentLang() == null && lang == lang_pair.split('|')[0]) return; var teCombo; var sel = document.getElementsByTagName('select'); for (var i = 0; i < sel.length; i++) if (sel[i].className == 'goog-te-combo') teCombo = sel[i]; if (document.getElementById('google_translate_element2') == null || document.getElementById('google_translate_element2').innerHTML.length == 0 || teCombo.length == 0 || teCombo.innerHTML.length == 0) { setTimeout(function () { doGTranslate(lang_pair) }, 500) } else { teCombo.value = lang; GTranslateFireEvent(teCombo, 'change'); GTranslateFireEvent(teCombo, 'change') } $("body").css("top", 0);
+        }
     </script>
     <script type="text/javascript">function googleTranslateElementInit2() { new google.translate.TranslateElement({ pageLanguage: 'vi', autoDisplay: false }, 'google_translate_element2'); }</script>
 
@@ -162,10 +162,13 @@
         body {
             top: 0px !important;
         }
+
         #google_translate_element2, .goog-te-banner-frame, .skiptranslate {
             display: none;
         }
     </style>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
 </body>
 </html>
