--- a/09_Theme_08_v2/Views/Shared/_Layout.cshtml
+++ b/09_Theme_08_v2/Views/Shared/_Layout.cshtml
@@ -146,5 +146,6 @@
         }]
         }
     </script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
 </body>
 </html>
