--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
                         <li data-target="#photographyCarousel" data-slide-to="0" class="active">
                             <div class="single-photography">
                                 <div class="photography-icon">
-                                    <i class="fa fa-cogs"></i>
+                                    <i class="fa fa-gift"></i>
                                 </div>
                                 <h2>Bảo quản</h2>
                                 <p>Các sản phẩm hữu cơ có thể để lâu hơn các sản phẩm sạch, và sử dụng phân bón kích thích. OFREZH không dùng bất cứ một chất phụ gia nào để bảo quản thực phẩm.</p>
@@ -142,7 +142,7 @@
                         <li data-target="#photographyCarousel" data-slide-to="2">
                             <div class="single-photography">
                                 <div class="photography-icon">
-                                    <i class="fa fa-puzzle-piece "></i>
+                                    <i class="fa fa-leaf"></i>
                                 </div>
                                 <h2>Công nghệ trồng rau hữu cơ</h2>
                                 <p>Rau Hữu Cơ OFREZH trồng từ Phân Trùn Quế không cần bất cứ loại phân bón nào mà vẫn phát triển khỏe mạnh. Chúng tôi nói không với phân bón hóa học, thuốc bảo vệ thực vật.</p>
