--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
-                <img src="https://media.anpero.com/images/29/92018/about2018090402260971.jpg" />
+                <img src="//media.anpero.com/images/29/92018/about2018090402260971.jpg" />
             </div>
         </div>
     </div>
