--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -19,12 +19,16 @@
     <meta name="revisit-after" content="1 days" />
     <meta http-equiv="REFRESH" content="1800" />
     <meta name="robots" content="index,follow,all" />
+    <meta name="googlebot" content="index,archive,follow,noodp" />
+    <meta name="msnbot" content="all,index,follow" />
     <meta property="og:title" content="@ViewBag.Title" />
-    @Styles.Render("~/Content/css")      
+    @Styles.Render("~/Content/css")
     <script src="/assets/js/vendor/modernizr-2.js"></script>
-    <script src="/assets/js/vendor/jquery-224.js"></script>
-    
+    <script src="//media.anpero.com/cdn/plugins/jquery-2.2.4.js"></script>
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+    <meta content="@commonInfo.Name" name="author" />
     @RenderSection("health", required: false)
+    <meta property="og:site_name" content="@commonInfo.Name">
 
 </head>
 <body>
@@ -68,7 +72,20 @@
                                 <p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:@commonInfo.Email">@commonInfo.Email</a></p>
 
                             </div>
-
+                            <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+                            <!-- Histats.com  START  (aync)-->
+                            <script type="text/javascript">
+    var _Hasync = _Hasync || [];
+                                _Hasync.push(['Histats.start', '1,4138849,4,428,112,75,00001111']);
+                                _Hasync.push(['Histats.fasi', '1']);
+                                _Hasync.push(['Histats.track_hits', '']);
+                                (function () {
+                                    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+                                    hs.src = ('//s10.histats.com/js15_as.js');
+                                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+                                })();</script>
+                            <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4138849&101" alt="" border="0"></a></noscript>
+                            <!-- Histats.com  END  -->
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3 xs-bottom-40">
@@ -134,6 +151,7 @@
     @Html.Raw(commonInfo.AnperoPlugin)
 
     @RenderSection("scripts", required: false)
+    <script src="//media.anpero.com/cdn/plugins/owl-carousel-min.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="/Scripts/jquery.cokie.min.js"></script>
     <script src="/Scripts/ShoppingCart.js"></script>
