--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -1,20 +1,16 @@
-﻿ 
-/* Google Fonts
-=================*/
-
+﻿
 @import url('https://fonts.googleapis.com/css?family=Dosis:300,400,600,700|Open+Sans:400,700');
-
-/* 0. Theme Default CSS */
-
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 a {
     -webkit-transition: 0.3s;
     transition: 0.3s;
-    font-family: 'Open Sans', sans-serif;
+    font-family:Arial,'Times New Roman';
+    color: #666;
 }
 
     a:focus {
@@ -35,8 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 15px;
-    font-family: 'Dosis', sans-serif;
+    margin: 0 0 15px;    
     -webkit-transition: 0.3s;
     transition: 0.3s;
     line-height: 1.4
@@ -48,7 +43,7 @@ body {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Segoe UI', Verdana,'Open Sans', sans-serif,arial,'Times New Roman';
     font-weight: 300;
     font-size: 15px;
     color: #464646;
@@ -602,8 +597,7 @@ textarea.form-control:focus {
     display: inline-block;
     padding: 2px 10px;
     border-radius: 3px;
-    cursor: pointer;
-    font-family: 'Dosis', sans-serif;
+    cursor: pointer;    
     font-weight: 600;
     color: #64BE43;
     transition: 0.3s;
@@ -710,8 +704,7 @@ textarea.form-control:focus {
     height: 85px;
     margin: auto;
     top: 0;
-    bottom: 0;
-    font-family: 'Dosis', sans-serif;
+    bottom: 0;    
     font-weight: 700;
 }
 
@@ -1057,8 +1050,7 @@ textarea.form-control:focus {
     border-radius: 5px;
     display: inline-block;
     color: #464646;
-    font-weight: 600;
-    font-family: 'Dosis', sans-serif;
+    font-weight: 600;    
 }
 
 .price-battn:hover {
@@ -1138,8 +1130,7 @@ textarea.form-control:focus {
 
 .client-text {
     width: 70%;
-    margin: auto;
-    font-family: 'Dosis', sans-serif;
+    margin: auto;    
     font-size: 18px;
     font-weight: 600;
     line-height: 1.4;
