--- a/06_Shop_Onepage/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/06_Shop_Onepage/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -1,136 +1,137 @@
-﻿<div class="column col-md-3 col-xs-3 col-sm-3" id="left_column">
-    <!-- block category -->
-    <div class="block left-module">
-        <p class="title_block">Danh mục sản phẩm</p>
-        <div class="block_content">
-            <!-- layered -->
-            @if (ViewData["commonInfo"] != null)
+﻿
+    <div class="column col-md-3 col-xs-12 col-sm-12" id="left_column">
+        <!-- block category -->
+        <div class="block left-module">
+            <p class="title_block">Danh mục sản phẩm</p>
+            <div class="block_content">
+                <!-- layered -->
+                @if (ViewData["commonInfo"] != null)
             {
                 AnperoFrontend.WebService.Webconfig commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
-                <div class="layered layered-category">
-                    <div class="layered-content">
-                        <ul class="tree-menu">
-                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                    <div class="layered layered-category">
+                        <div class="layered-content">
+                            <ul class="tree-menu">
+                                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
                                 for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
                                 {
-                                    <li>
-                                        <a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].Name,commonInfo.ProductCategoryList[i].Id)">@commonInfo.ProductCategoryList[i].Name</a>
-                                        @if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
+                                        <li>
+                                            <a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].Name,commonInfo.ProductCategoryList[i].Id)">@commonInfo.ProductCategoryList[i].Name</a>
+                                            @if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
                                         {
-                                            <ul>
-                                                @for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
+                                                <ul>
+                                                    @for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
                                                 {
-                                                    <li><span></span><a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a></li>
+                                                        <li><span></span><a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a></li>
                                                 }
-                                            </ul>
+                                                </ul>
 
                                         }
-                                    </li>
+                                        </li>
 
                                 }
                              }
-                                </ul>
-                            </div>
+                            </ul>
                         </div>
+                    </div>
 
 
                 }
-                </div>
-       </div>
-            @if (ViewData["saleProduct"] != null)
+            </div>
+        </div>
+        @if (ViewData["saleProduct"] != null)
             {
-                <div class="block left-module">
-                    <p class="title_block">Đang giảm giá</p>
-                    <div class="block_content product-onsale">
+            <div class="block left-module">
+                <p class="title_block">Đang giảm giá</p>
+                <div class="block_content product-onsale">
 
-                        @{
+                    @{
                             AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
                             if (saleProduct != null)
                             {
-                                <ul class="product-list @(saleProduct.Length > 1?"owl-carousel":"")">
-                                    @foreach (var item in saleProduct)
+                            <ul class="product-list @(saleProduct.Length > 1?"owl-carousel":"")">
+                                @foreach (var item in saleProduct)
                                     {
-                                        <li>
-                                            <div class="product-container">
-                                                <div class="left-block">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">
-                                                        <img class="img-responsive" alt="product" src="@item.Images" />
-                                                    </a>
-                                                    <div class="price-percent-reduction2">- @Anpero.StringHelpper.GetDiscountPersen(item.Price, item.SalePrice).ToString() %</div>
+                                    <li>
+                                        <div class="product-container">
+                                            <div class="left-block">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">
+                                                    <img class="img-responsive" alt="product" src="@item.Images" />
+                                                </a>
+                                                <div class="price-percent-reduction2">- @Anpero.StringHelpper.GetDiscountPersen(item.Price, item.SalePrice).ToString() %</div>
+                                            </div>
+                                            <div class="right-block">
+                                                <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">@item.PrName</a></h5>
+                                                <div class="show-count-down">
+                                                    <span class="countdown-lastest" data-y="@item.SaleEndTime.Substring(0,4)" data-m="@item.SaleEndTime.Substring(4,2)" data-d="@item.SaleEndTime.Substring(6,2)" data-h="0" data-i="00" data-s="10"></span>
                                                 </div>
-                                                <div class="right-block">
-                                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">@item.PrName</a></h5>
-                                                    <div class="show-count-down">
-                                                        <span class="countdown-lastest" data-y="@item.SaleEndTime.Substring(0,4)" data-m="@item.SaleEndTime.Substring(4,2)" data-d="@item.SaleEndTime.Substring(6,2)" data-h="0" data-i="00" data-s="10"></span>
-                                                    </div>
-                                                    <div class="content_price">
-                                                        <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                                        <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
-                                                    </div>
-                                                </div>
-                                                <div class="product-bottom">
-                                                    <a class="btn-add-cart btn btn-success btn-add-cart" title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Thêm vào giỏ hàng</a>
+                                                <div class="content_price">
+                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
                                                 </div>
                                             </div>
-                                        </li>
+                                            <div class="product-bottom">
+                                                <a class="btn-add-cart btn btn-success btn-add-cart" title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Thêm vào giỏ hàng</a>
+                                            </div>
+                                        </div>
+                                    </li>
 
                                     }
-                                </ul>
+                            </ul>
                             }
 
 
-                        }
+                    }
 
 
 
-                    </div>
                 </div>
+            </div>
             }
-            @if (ViewData["BestsaleProduct"] != null)
+        @if (ViewData["BestsaleProduct"] != null)
             {
                 AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
                 if (bestSaleList != null && bestSaleList.Item.Length > 0)
                 {
-                    <div class="block left-module">
-                        <p class="title_block">Bán chạy</p>
-                        <div class="block_content">
-                            <div class="owl-best-sell">
+                <div class="block left-module">
+                    <p class="title_block">Bán chạy</p>
+                    <div class="block_content">
+                        <div class="owl-best-sell">
 
-                                <ul class="products-block best-sell">
-                                    @for (int i = 0; i < bestSaleList.Item.Length; i++)
+                            <ul class="products-block best-sell">
+                                @for (int i = 0; i < bestSaleList.Item.Length; i++)
                                     {
-                                        <li>
-                                            <div class="products-block-left">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                                    <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                                </a>
-                                            </div>
-                                            <div class="products-block-right">
-                                                <p class="product-name">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                                </p>
-                                                @if (bestSaleList.Item[i].IsSale)
+                                    <li>
+                                        <div class="products-block-left">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                                <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                            </a>
+                                        </div>
+                                        <div class="products-block-right">
+                                            <p class="product-name">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                            </p>
+                                            @if (bestSaleList.Item[i].IsSale)
                                                 {
 
-                                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString())</p>
+                                                <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString())</p>
                                                     <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
                                                 }
                                                 else
                                                 {
-                                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                                <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
                                                 }
-                                            </div>
-                                        </li>
+                                        </div>
+                                    </li>
                                     }
-                                </ul>
-                            </div>
+                            </ul>
                         </div>
                     </div>
+                </div>
                 }
 
             }
-            <!-- block best sellers -->
+        <!-- block best sellers -->
 
-        </div>
+    </div>
 
