--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -2845,6 +2845,7 @@ span.notify-right{
   margin-bottom: 0;
 }
 
+.tree-menu li
 .tree-menu li{
     line-height: 30px;
     border-top: 1px solid #eaeaea;     
