--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 hidden-sm">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
                             <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="325" data-hide-cover="false"></div>
@@ -188,5 +188,6 @@
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
+
 </body>
 </html>
